[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.4", features = ["postgres","r2d2"] }
dotenvy = "0.15.7"
axum = "0.7.2"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["registry","env-filter"] }
tracing-bunyan-formatter = "0.3.9"

[[bin]]
name = "url-shortener"
path = "src/main.rs"
