[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
sqlx = { version = "0.7.3", features = ["runtime-tokio","postgres"] }

dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["registry","env-filter"] }
tracing-bunyan-formatter = "0.3.9"

sentry = { version = "0.32.1", features = ["tracing","tower","tower-http"] }

[[bin]]
name = "url-shortener"
path = "src/main.rs"
